Chatroom: Fix repository chat user menu links don't work on mobile devices (Mantis issue 30573)

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -16751,6 +16751,9 @@ td.chatroom {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
+.ilChatroomUser .dropdown-backdrop {
+  position: static;
+}
 .ilChatroomUser .media {
   padding: 0;
 }
